test/spec_vectors/memory64/fail/module_14.wat
(module (func (drop (i32.load8_s (i64.const 0)))))